# ChangeLog for net-analyzer/fail2ban
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fail2ban/ChangeLog,v 1.96 2013/06/06 16:53:14 jer Exp $

  06 Jun 2013; Jeroen Roovers <jer@gentoo.org> -fail2ban-0.8.6-r1.ebuild,
  -fail2ban-0.8.6.ebuild, -fail2ban-0.8.7.1.ebuild,
  -files/fail2ban-0.8.6-gentoo-init.patch,
  -files/fail2ban-0.8.6-sshd-breakin.patch, fail2ban-0.8.8.ebuild,
  fail2ban-0.8.9.ebuild:
  Use FILESDIR instead of hard-coded path!

*fail2ban-0.8.9 (06 Jun 2013)

  06 Jun 2013; Jeroen Roovers <jer@gentoo.org> +fail2ban-0.8.9.ebuild:
  Version bump (bug #469950). Migrate to distutils-r1.eclass. Enable test suite.

  04 Jan 2013; Agostino Sarubbo <ago@gentoo.org> fail2ban-0.8.8.ebuild:
  Stable for ppc64, wrt bug #447572

  03 Jan 2013; Jeroen Roovers <jer@gentoo.org> fail2ban-0.8.8.ebuild:
  /var/run/fail2ban -> /run/fail2ban (bug #449966).

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> fail2ban-0.8.8.ebuild:
  Stable for ppc, wrt bug #447572

  28 Dec 2012; Jeroen Roovers <jer@gentoo.org> fail2ban-0.8.8.ebuild:
  Stable for HPPA (bug #447572).

  26 Dec 2012; Agostino Sarubbo <ago@gentoo.org> fail2ban-0.8.8.ebuild:
  Stable for amd64, wrt bug #447572

  26 Dec 2012; Jeff Horelick <jdhore@gentoo.org> fail2ban-0.8.8.ebuild:
  marked x86 per bug 447572

*fail2ban-0.8.8 (17 Dec 2012)

  17 Dec 2012; Jeroen Roovers <jer@gentoo.org> +fail2ban-0.8.8.ebuild:
  Version bump by Mario Kicherer (bug #447572).

*fail2ban-0.8.7.1 (07 Sep 2012)

  07 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> +fail2ban-0.8.7.1.ebuild:
  Version bump wrt bug #430304. Thanks to Michael Mair-Keimberger and Leho
  Kraav

  07 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> fail2ban-0.8.6-r1.ebuild:
  Use vcs-snapshot eclass

*fail2ban-0.8.6-r1 (05 Sep 2012)

  05 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> +fail2ban-0.8.6-r1.ebuild:
  Add new revision with virtual/logger dependency wrt bug #433980
