@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/fail2ban
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fail2ban/ChangeLog,v 1.96 2013/06/06 16:53:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/fail2ban/ChangeLog,v 1.97 2013/06/06 17:00:14 jer Exp $
+
+  06 Jun 2013; Jeroen Roovers <jer@gentoo.org> fail2ban-0.8.8.ebuild,
+  fail2ban-0.8.9.ebuild, -files/fail2ban.conf.d:
+  Install upstream logrotate script. Revert that change for 0.8.8.
 
   06 Jun 2013; Jeroen Roovers <jer@gentoo.org> -fail2ban-0.8.6-r1.ebuild,
   -fail2ban-0.8.6.ebuild, -fail2ban-0.8.7.1.ebuild,
